--- a/css/public.css
+++ b/css/public.css
@@ -3017,7 +3017,7 @@ textarea.form-control-lg { min-height: calc(1.5em + (1rem + 2px)); }
 
 html { font-size: 14px; }
 
-body { position: relative; display: inline-block; width: 100%; margin: 0; padding: 0; color: #000; font-family: "nbk", "microsoft yahei","微軟正黑體",arial,sans-serif; line-height: 26px; text-size-adjust: none; -webkit-text-size-adjust: none; background-color: white; }
+body { position: relative; display: inline-block; width: 100%; margin: 0; padding: 0; color: #000; font-family: "nbk", "Noto Sans TC", "微軟正黑體", arial, sans-serif; line-height: 26px; text-size-adjust: none; -webkit-text-size-adjust: none; background-color: white; }
 
 a { cursor: pointer; text-decoration: none !important; }
 a:after, a:before { vertical-align: top !important; }
@@ -3065,6 +3065,8 @@ hr { color: #adb5bd; opacity: 1; }
 
 @media (max-width: 760px) { .swiper-button-next-tag { right: 20px; transform: rotate(0deg); }
   .swiper-button-prev-tag { left: 20px; transform: rotate(0deg); } }
+.card-title { height: 42px; display: -webkit-box; -webkit-box-orient: vertical; -webkit-line-clamp: 2; overflow: hidden; text-overflow: ellipsis; }
+
 .card-text { font-size: 1.25rem; }
 
 .ticket-nav { font-size: 1.2rem !important; color: black !important; background-color: transparent !important; border-radius: 0 !important; padding-bottom: 13px; padding-top: 0 !important; }
