--- a/scss/public.scss
+++ b/scss/public.scss
@@ -73,7 +73,8 @@ body {
   color: #000;
 
   // font: normal 14px/20px "新細明體";
-  font-family:"nbk", "microsoft yahei","微軟正黑體",arial,sans-serif;
+  font-family: "nbk", "Noto Sans TC", "微軟正黑體", arial, sans-serif;
+  // font-family:"nbk", "microsoft yahei","微軟正黑體",arial,sans-serif;
   // font-family:"nbk", "微軟正黑體",arial,sans-serif;
   line-height: 26px;
 
@@ -259,6 +260,15 @@ hr {
 
 
 // bo
+.card-title {
+  height: 42px;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .card-text {
   font-size: 1.25rem
 }
