--- a/css/public.css
+++ b/css/public.css
@@ -3160,7 +3160,7 @@ hr { color: #adb5bd; opacity: 1; }
 
 .f9 { font-size: .9rem; }
 
-.used { display: inline-block; color: #989898; }
+.used { display: inline-block; width: 100%; color: #989898; }
 
 .cupon-text { display: -webkit-box; -webkit-box-orient: vertical; -webkit-line-clamp: 2; overflow: hidden; text-overflow: ellipsis; font-size: 1.1rem; height: 42px; line-height: 20px; }
 
