--- a/css/public.css
+++ b/css/public.css
@@ -3055,7 +3055,7 @@ hr { color: #adb5bd; opacity: 1; }
 .swiper-button-next.swiper-button-prev-tag:after, .swiper-button-prev.swiper-button-prev-tag:after { font-size: 20px !important; }
 .swiper-button-next:hover, .swiper-button-prev:hover { opacity: 1 !important; }
 
-.swiper-tag { width: 100%; height: 55px; }
+.swiper-tag { width: 100%; }
 
 .swiper-slide-tag { text-align: center; font-size: 18px; background: #fff; display: flex; justify-content: center; align-items: center; }
 
@@ -3101,7 +3101,7 @@ hr { color: #adb5bd; opacity: 1; }
 
 .accordion-button:not(.collapsed)::after { background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-dash-lg" viewBox="0 0 16 16"><path fill-rule="evenodd" d="M2 8a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11A.5.5 0 0 1 2 8"/></svg>') !important; }
 
-.nav-link { padding: 0.5rem .8rem !important; }
+.nav-link { padding: 0.5rem .5rem !important; }
 .nav-link.tag-link { cursor: pointer; text-align: center; font-size: 1.1rem !important; color: #989898 !important; background-color: transparent !important; }
 .nav-link.tag-link.active { color: black !important; }
 .nav-link.tag-link-login { cursor: pointer; text-align: center; font-size: 1.1rem !important; color: #989898 !important; background-color: white !important; }
