--- a/scss/public.scss
+++ b/scss/public.scss
@@ -206,7 +206,7 @@ hr {
 // 小頁籤
 .swiper-tag {
   width: 100%;
-  height: 55px;
+  // height: 55px;
 }
 
 .swiper-slide-tag {
@@ -375,7 +375,7 @@ hr {
 
 
 .nav-link {
-  padding: 0.5rem .8rem !important;
+  padding: 0.5rem .5rem !important;
 
   &.tag-link {
     cursor: pointer;
